# anime

./: .env.example  .gitignore  index.html  main.py  pyproject.toml  requiremnts.txt
.github/workflows/: deploy.yml
artplayer/: artplayer-plugin-playlist.browser.js  index.html
auth/: auth.js  index.html
cors/: background.js  manifest.json  rules.json
fb/: index.html
frame/: index.html
gdrive/: index.html
jwplayer/: index.html
player/: index.html  player.js
r3player/: index.html  main.js  style.css
room/: index.html  player.js
scripts/: anilist.py  anime_crawler.py  anime_update.py  animevietsub.py  avs_extract.py  clone_yt.py  crawl.py  crawl_tvn.py  fetch_stream.py  fire.py  get_fb.py  google_search.py  imdb.py  jikan.py  kaguya.py  main.py  motchill.py  sele.py  sheet.py  time_utils.py  update_fire.py  update_sheet.py  yeuphim.py
ublock/: ublock-static-filters.txt
yt/: index.html
