[project]
name = "anime"
version = "0.1.0"
description = "Anime crawlers (scripts/) + web video players served by Flask (main.py)"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "firebase-admin>=7.4.0",
    "flask>=3.1.3",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selenium>=4.45.0",
    "tqdm>=4.68.3",
]

[tool.uv]
# This repo is a collection of standalone scripts + a Flask app, not an
# installable package — only manage the environment, don't build the project.
package = false
